// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FolderItem Component > should match read snapshot 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="group flex h-12 cursor-pointer select-none items-center rounded-lg bg-gray-200 px-2 text-gray-600 hover:text-gray-800"
    >
      <div
        class="relative flex flex-1 flex-row items-center overflow-hidden"
      >
        <div
          class="p-1"
        >
          <svg
            style="width: 24px; height: 24px;"
          >
            <use
              href="icons.svg#folder-close"
            />
          </svg>
        </div>
        <div
          class="ml-3 max-h-6 overflow-hidden whitespace-nowrap font-medium text-slate-200 group-hover:text-gray-800"
        >
          Chronicle Labs
        </div>
        <div
          class="absolute right-0 h-full w-12 bg-gradient-to-r from-transparent to-gray-200"
        />
      </div>
      <div>
        <svg
          class="hidden group-hover:inline-block"
          style="width: 24px; height: 24px;"
        >
          <use
            href="icons.svg#vertical-dots"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FolderItem Component > should match write snapshot 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="group flex h-12 cursor-pointer select-none items-center rounded-lg bg-gray-200 px-2 text-gray-800"
    >
      <div
        class="relative flex flex-1 flex-row items-center overflow-hidden"
      >
        <div
          class="p-1"
        >
          <svg
            style="width: 24px; height: 24px;"
          >
            <use
              href="icons.svg#folder-close"
            />
          </svg>
        </div>
        <div
          class="flex items-center ml-3 flex-1 font-medium"
        >
          <div
            class="w-full"
            data-rac=""
          >
            <input
              class="w-full bg-inherit outline-none"
              data-focus-visible="true"
              data-focused="true"
              data-rac=""
              id="react-aria-:r2:"
              title=""
              type="text"
              value="Chronicle Labs"
            />
          </div>
          <div
            class="flex items-center pr-2"
          >
            <button
              class="outline-none"
              data-rac=""
              type="button"
            >
              <svg
                class="text-gray-600"
                style="width: 24px; height: 24px;"
              >
                <use
                  href="icons.svg#xmark"
                />
              </svg>
            </button>
            <button
              class="outline-none"
              data-rac=""
              type="button"
            >
              <svg
                class="text-gray-600"
                style="width: 24px; height: 24px;"
              >
                <use
                  href="icons.svg#check"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
